<resources>
    <!-- Common stuff -->
    <string name="app_name">Boadskipje</string>
    <string name="boadskip">Boadskip</string>

    <!-- MainActivity -->
    <string name="title_list">List</string>
    <string name="title_scan_code">Scan barcode</string>

    <!-- AddItemActivity -->
    <string name="add_boadskip">Boadskip tafoegje</string>
    <string name="add">Tafoegje</string>

    <!-- AddCodeActivity -->
    <string name="couple_code">Code keppelje</string>
    <string name="couple">Keppelje</string>
    <string name="code">Code:</string>

    <!-- PermissionActivity -->
    <string name="permissions">Tastimmingen</string>
    <string name="ask_permission">Tastimming freegje</string>
    <string name="permission_granted">✓ Tastimming kriget</string>
    <string name="correct_function">Foar korrekte wurking fan \'e app</string>
    <string name="use_scanner">Foardat gebrûk fan \'e scanner</string>
    <string name="permission_read_external_storage">Bestânnen lêze</string>
    <string name="permission_write_external_storage">Bestânnen skriuwe</string>
    <string name="permission_use_camera">Camera</string>
    <string name="permission_record_audio">Audio</string>
</resources>