<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PermissionActivity"
        android:background="@color/background">

    <TextView
            android:id="@+id/permission_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/permissions"
            android:textAlignment="center"/>

    <LinearLayout
            android:id="@+id/permission_correct_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/permission_header"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/correct_function"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:layout_marginStart="30dp"
                      android:text="@string/permission_read_external_storage"/>
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:text="@string/ask_permission"
                      android:layout_marginEnd="30dp"
                      android:textAlignment="textEnd"
                      android:layout_weight="2"
                      android:id="@+id/read_external_storage_permission_button"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:layout_marginStart="30dp"
                      android:text="@string/permission_write_external_storage"/>
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:text="@string/ask_permission"
                      android:layout_marginEnd="30dp"
                      android:textAlignment="textEnd"
                      android:layout_weight="2"
                      android:id="@+id/write_external_storage_permission_button"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/permission_correct_function"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/use_scanner"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:layout_marginStart="30dp"
                      android:text="@string/permission_use_camera"/>
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:text="@string/ask_permission"
                      android:layout_marginEnd="30dp"
                      android:textAlignment="textEnd"
                      android:layout_weight="2"
                      android:id="@+id/use_camera_permission_button"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:layout_marginStart="30dp"
                      android:text="@string/permission_record_audio"/>
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:text="@string/ask_permission"
                      android:layout_marginEnd="30dp"
                      android:textAlignment="textEnd"
                      android:layout_weight="2"
                      android:id="@+id/record_audio_permission_button"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>