<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.AddCodeActivity">

    <TextView
            android:text="@string/couple_code"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/codeHeader"
            android:layout_margin="15dp"
    />
    <TextView
            android:text="@string/code"
            android:id="@+id/codeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/codeHeader"
            android:layout_margin="15dp"
    />
    <TextView
            android:id="@+id/code"
            android:textColor="@color/white"
            android:background="#C6B491"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/codeHeader"
            android:layout_toEndOf="@id/codeTextView"
            android:padding="5dp"
            android:layout_marginTop="10dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputCode"
            android:layout_below="@id/code">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/boadskip"
                android:maxLines="1"
                android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitCode"
            android:layout_below="@id/textInputCode"
            android:text="@string/couple"
            android:textAllCaps="false"
            android:background="@drawable/listitem"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
    />
</RelativeLayout>