<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.AddItemActivity">

    <TextView
            android:text="@string/add_boadskip"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_margin="15dp"
    />
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInput"
            android:layout_below="@id/textView">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/boadskip"
                android:maxLines="1"
                android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:layout_below="@id/textInput"
            android:text="@string/add"
            android:textAllCaps="false"
            android:background="@drawable/listitem"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            />
</RelativeLayout>